@@ -1,6 +1,9 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
 changes in sbcl-1.3.14
+  * minor incompatible change: the SB-PCL walker no longer recognizes
+    macros expanding into a DECLARE expression. This is not a language change,
+    since ANSI forbids such usage (X3J13 issue DECLARE-MACROS:FLUSH).
   * enhancement: for several macros such as MULTIPLE-VALUE-{BIND,SETQ}, COND,
     DO{,*,LIST}, {RESTART,HANDLER}-{BIND,CASE}, *CASE, conditions signaled
     during macroexpansion point to the form that caused the problem more
